<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FEEEEEEE"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/titleHelp"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@drawable/skin_title"
        android:gravity="center_horizontal|center_vertical" >

        <Button
            android:id="@+id/btnAboutBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@xml/btn_style_title_1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/settings_back"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnAboutBack"
            android:layout_alignTop="@+id/btnAboutBack"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/what_version"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleHelp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:isScrollContainer="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/app_title"
                android:textColor="#FF408080"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/what_this"
                android:textColor="#FF408080"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/share_face_01"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/what_question"
                    android:textColor="#FF408080"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/what_konwn"
                        android:textColor="#FF408080"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/share_face_02"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/what_slution"
                    android:textColor="#FF408080"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/what_error"
                        android:textColor="#FF408080"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/share_face_03"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/what_about"
                    android:textColor="#FF408080"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/what_content"
                        android:textColor="#FF408080"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>