<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/skin_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/whatthis"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal|center_vertical" >

        <RelativeLayout
            android:id="@+id/layoutInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/skin_input"
            android:gravity="center_horizontal|center_vertical" >

            <LinearLayout
                android:id="@+id/layoutUser"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_horizontal|center_vertical|left" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:drawableLeft="@drawable/icon_feedback" />

                <EditText
                    android:id="@+id/editUser"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@xml/edit_style_null"
                    android:ems="10"
                    android:hint="@string/hint_edituser"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="18sp" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <View
                android:id="@+id/textInputLine"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/layoutUser"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:background="@xml/shape_line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@+id/textInputLine"
                android:gravity="center_horizontal|center_vertical|left" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:drawableLeft="@drawable/icon_password" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@xml/edit_style_null"
                    android:ems="10"
                    android:hint="@string/hint_editpassword"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutInput"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal|center_vertical" >

            <TextView
                android:id="@+id/textSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/textsettings"
                android:textColor="@xml/text_style_1"
                android:textSize="16sp" />
            
           <TextView
                android:id="@+id/textCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/textCopy"
                android:textColor="@xml/text_style_1"
                android:textSize="16sp" />
           
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:background="@xml/btn_style_3"
                android:text="@string/pppoe_connect"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>