<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FEEEEEEE"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/titleSettings"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@drawable/skin_title"
        android:gravity="center_horizontal|center_vertical" >

        <Button
            android:id="@+id/btnSettingsBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@xml/btn_style_title_1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/settings_back"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnSettingsBack"
            android:layout_alignTop="@+id/btnSettingsBack"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/dialer_settings"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleSettings" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:isScrollContainer="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@xml/shape_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="50dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textEthnet"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1.0"
                        android:text="@string/settings_ethnet"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <pppoe.control.WiperSwitchTouch
                        android:id="@+id/switchEthernet"
                        android:layout_width="64dp"
                        android:layout_height="28dp"
                        android:layout_marginBottom="2.5dp"
                        android:layout_marginRight="10dp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@xml/shape_line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="50dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textMonitor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1.0"
                        android:text="@string/settings_monitor"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <pppoe.control.WiperSwitchTouch
                        android:id="@+id/switchMonitor"
                        android:layout_width="64dp"
                        android:layout_height="28dp"
                        android:layout_marginBottom="2.5dp"
                        android:layout_marginRight="10dp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@xml/shape_line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@xml/shape_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:background="@xml/btn_style_4"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="45dp"
                    android:onClick="typeClick"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textTelecom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1.0"
                        android:text="@string/settings_type"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="1.5dp"
                        android:contentDescription="@string/textNull"
                        android:src="@drawable/icon_into" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@xml/shape_line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:background="@xml/btn_style_6"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="45dp"
                    android:onClick="downloadClick"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1.0"
                        android:text="@string/status_test"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/textNull"
                        android:src="@drawable/icon_into" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@xml/shape_line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.5dp"
                    android:layout_marginLeft="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:background="@xml/btn_style_5"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:minHeight="45dp"
                    android:onClick="aboutClick"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1.0"
                        android:text="@string/what_version"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="1.5dp"
                        android:contentDescription="@string/textNull"
                        android:src="@drawable/icon_into" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@xml/btn_style_2"
                    android:text="@string/settings_reset"
                    android:textColor="#FFF0F0F0"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>